# rubin-anomaly-hunter

./: .gitignore  CLAUDE.md  PRD.md  README.md  SESSION_HANDOFF.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
.streamlit/: config.toml
configs/: thresholds-commissioning.yaml
dashboard/: app.py
dashboard/lib/: cadence.py  components.py  db.py  mockimg.py  narrative.py  plainlang.py  rehydrate.py  reporting.py  skymap.py  strip_plot.py  theme.py
dashboard/pages/: 1_Ledger.py  1_Past_flags.py  1_Watch_List.py  2_Candidate_Detail.py  2_Health.py  3_Archive.py  4_Pipeline_Health.py
dashboard/static/: theme.css
data/: README.md  demo.sqlite
docs/decisions/: 0001-scope-narrowing-uap-to-iso.md  0002-personal-tool-scope.md  0003-rubin-primary-ztf-calibration.md  0004-dark-comets-primary-isos-secondary.md  0005-two-stage-gate.md  0006-commissioning-window-threshold-lock.md  0007-delegate-tracklet-linking.md  0008-find-orb-for-orbit-fitting.md  0009-own-detection-history-layer.md  0010-alert-only-no-rsp-access.md  0011-mission-control-modern-visual-direction.md  0012-narrative-first-information-architecture.md  0013-lasair-rest-interim-ingest.md  0014-single-surface-master-detail-ia.md  0015-display-typography-plex-sans.md  0016-fink-kafka-primary-ingest.md  0017-cloud-hosted-execution.md  0018-hobbyist-first-reframing.md  README.md  template.md
docs/ux/: brief.md  design-system.md
scripts/: make_demo_db.py  run_dashboard.bat  run_dashboard.sh  run_live_pipeline.py  smoke_pipeline_offline.py
scripts/wsl/: bootstrap.sh  setup_fink_creds.sh
src/rubin_hunter/: config.py  (+2 more)
(+13 files in other folders)
